--- a/templates/common/form/input_select.html
+++ b/templates/common/form/input_select.html
@@ -1,4 +1,4 @@
-<div class="fr-select-group {% if form_input.errors %}fr-select-group--error{% endif %}">
+<div class="fr-select-group {% if form_input.errors %}fr-select-group--error{% endif %}" id="{{form_input.id_for_label}}_group">
     {% if form_input.label %}
         <label class="fr-label {{ label_class }}" for="{{form_input.id_for_label}}">
             {{ form_input.label }}
@@ -33,7 +33,7 @@
                 {% endfor %}
             {% endif %}
         </select>
-        {% include "common/comment_icon.html" with form_input_id=form_input.id_for_label object_field=object_field comments=comments %}
+        {% include "common/utils/comments_field.html" %}
     </div>
 
     {% for error in form_input.errors %}
@@ -42,5 +42,3 @@
         </p>
     {% endfor %}
 </div>
-
-{% include "common/comment_dialog.html" with form_input_id=form_input.id_for_label form_input_html=form_input.html_name convention=convention object_field=object_field comments=comments %}
