--- a/templates/common/form/input_textarea.html
+++ b/templates/common/form/input_textarea.html
@@ -1,4 +1,4 @@
-<div class="fr-input-group {% if form_input.errors %}fr-select-group--error{% endif %}">
+<div class="fr-input-group {% if form_input.errors %}fr-select-group--error{% endif %}" id="{{form_input.id_for_label}}_group">
     {% if label %}
         <label class="fr-label" for="{{form_input.id_for_label}}">
             {{ label }}
@@ -22,8 +22,6 @@
                 {{ error }}
             </p>
         {% endfor %}
-        {% include "common/comment_icon.html" with form_input_id=form_input.id_for_label object_field=object_field comments=comments %}
+        {% include "common/utils/comments_field.html" %}
     </div>
 </div>
-
-{% include "common/comment_dialog.html" with form_input_id=form_input.id_for_label form_input_html=form_input.html_name  convention=convention object_field=object_field comments=comments %}
