--- a/templates/common/display_text_and_files_if_exists.html
+++ b/templates/common/display_text_and_files_if_exists.html
@@ -1,12 +1,11 @@
 {% if file_list or text %}
     {% if object_field %}
-        <div class="block--row-strech" id="{{object_field}}_div">
+        <div class="block--row-strech" id="{{object_field}}_group">
             <div class="block--row-strech-1">
                 <p class="fr-my-1w">{% if label %}{{label}} : {% endif %}{% if text %}{{ text|linebreaks }}{% endif %}</p>
             </div>
-            {% include "common/comment_icon.html" with form_input_id=object_field object_field=object_field comments=comments small=True %}
+            {% include "common/utils/comments_field.html" %}
         </div>
-        {% include "common/comment_dialog.html" with form_input_id=object_field form_input_html=object_field convention=convention object_field=object_field comments=comments %}
     {% else %}
         <p class="fr-my-1w">{% if label %}{{label}} : {% endif %}{% if text %}{{ text|linebreaks }}{% endif %}</p>
     {% endif %}
