--- a/templates/common/form/input_number.html
+++ b/templates/common/form/input_number.html
@@ -1,6 +1,6 @@
 
 {% load l10n %}
-<div class="fr-input-group {% if form_input.errors %}fr-select-group--error{% endif %}">
+<div class="fr-input-group {% if form_input.errors %}fr-select-group--error{% endif %}" id="{{form_input.id_for_label}}_group">
     {% if form_input.label %}
         <label class="fr-label" for="{{form_input.id_for_label}}">
             {{ form_input.label }}
@@ -27,7 +27,7 @@
                     .addEventListener('click', function(){ {{onchange}} });
             });
         </script>
-        {% include "common/comment_icon.html" with form_input_id=form_input.id_for_label object_field=object_field comments=comments %}
+        {% include "common/utils/comments_field.html" %}
     </div>
 
     {% for error in form_input.errors %}
@@ -36,5 +36,3 @@
         </p>
     {% endfor %}
 </div>
-
-{% include "common/comment_dialog.html" with form_input_id=form_input.id_for_label form_input_html=form_input.html_name  convention=convention object_field=object_field comments=comments %}
