--- a/templates/common/form/input_text.html
+++ b/templates/common/form/input_text.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div class="fr-input-group {% if form_input.errors %}fr-select-group--error{% endif %}">
+<div class="fr-input-group {% if form_input.errors %}fr-select-group--error{% endif %}" id="{{form_input.id_for_label}}_group">
     {% if form_input.label %}
         <label class="fr-label" for="{{form_input.id_for_label}}">
             {{ form_input.label }}
@@ -17,7 +17,7 @@
             name="{{form_input.html_name}}"
             value="{{ form_input.value|default_if_none:'' }}"
             {% include "common/form/disable_form_input.html" %}>
-        {% include "common/comment_icon.html" with form_input_id=form_input.id_for_label object_field=object_field comments=comments %}
+        {% include "common/utils/comments_field.html" %}
     </div>
     {% for error in form_input.errors %}
         <p id="text-input-error-desc-error" class="fr-error-text">
@@ -25,6 +25,4 @@
         </p>
     {% endfor %}
 </div>
-
-{% include "common/comment_dialog.html" with form_input_id=form_input.id_for_label form_input_html=form_input.html_name convention=convention object_field=object_field comments=comments %}
 
