--- a/templates/conventions/edd.html
+++ b/templates/conventions/edd.html
@@ -8,7 +8,6 @@
     <script src="{% static "dropzonejs/min/dropzone.min.js" %}" nonce="{{request.csp_nonce}}"></script>
     <script src="{% static "dropzonejs/min/dropzone-amd-module.min.js" %}" nonce="{{request.csp_nonce}}"></script>
     <script src="{% static "js/dropzone-client.js" %}" nonce="{{request.csp_nonce}}"></script>
-    <script src="{% static "js/comment-block.js" %}" nonce="{{request.csp_nonce}}"></script>
     <script src="{% static "js/comment-factory.js" %}" nonce="{{request.csp_nonce}}"></script>
 {% endblock %}
 
@@ -121,7 +120,7 @@
                                 <thead>
                                     <tr>
                                         {% if convention.statut != 'BROUILLON' %}
-                                            {% include 'common/utils/comments_header.html' with object_name='logement_edd' %}
+                                            {% include 'common/utils/comments_header.html' with object_name='logement_edd' label="Logements de l'EDD" %}
                                         {% endif %}
                                         <th scope="col">Financement {% if formset.total_form_count %}{% include "common/form/required_field_star.html" %}{% endif %}</th>
                                         <th scope="col">Désignation {% if formset.total_form_count %}{% include "common/form/required_field_star.html" %}{% endif %}</th>
@@ -131,11 +130,10 @@
                                 <tbody>
                                     {% for form_edd in formset %}
                                         {% with input_id="logement_edd_"|add:form_edd.uuid.value main_object_field="logement_edd__uuid__"|add:form_edd.uuid.value %}
-                                            <tr>
+                                            <tr id="{{form_edd.uuid.id_for_label}}_group">
                                                 {% if convention.statut != 'BROUILLON' %}
                                                     <td id="{{form_edd.uuid.id_for_label}}_div">
-                                                        {% include "common/comment_icon.html" with form_input_id=form_edd.uuid.id_for_label object_field=main_object_field comments=comments %}
-                                                        {% include "common/comment_dialog.html" with form_input_id=form_edd.uuid.id_for_label form_input_html=form_edd.uuid.html_name convention=convention object_field=main_object_field comments=comments %}
+                                                        {% include 'common/utils/comments_field.html' with object_field=main_object_field form_input=form_edd.uuid %}
                                                     </td>
                                                 {% endif %}
                                                 <td>
