--- a/templates/conventions/programme.html
+++ b/templates/conventions/programme.html
@@ -5,7 +5,7 @@
 {% block page_title %}Programme - APiLos{% endblock%}
 
 {% block javascript_extras %}
-    <script src="{% static "js/comment-block.js" %}" nonce="{{request.csp_nonce}}"></script>
+    <script src="{% static "js/comment-factory.js" %}" nonce="{{request.csp_nonce}}"></script>
 {% endblock %}
 
 {% block content %}
