--- a/templates/common/display_checkbox.html
+++ b/templates/common/display_checkbox.html
@@ -1,8 +1,8 @@
 {% if object_field %}
     <div class="block--row-strech" id="{{object_field}}_group">
-        <div class="block--row-strech-1">
-            <div class="fr-mt-1w content__fileblock">
-                <div class="content__icons content__icons--small content__icons--darkgrey">
+        <div class="block--row-strech-1 fr-my-1w ">
+            <div class="content__fileblock">
+                <div class="content__icons--checkbox">
                     <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-labelledby="checkboxIconTitle">
                         <title id="checkboxIconTitle">Checkbox</title>
                         <rect x="21" y="3" width="18" height="18" rx="1" transform="rotate(90 21 3)"></rect>
@@ -11,7 +11,7 @@
                         {% endif %}
                     </svg>
                 </div>
-                <div class="fr-mb-1w">
+                <div>
                     {{label}}
                 </div>
             </div>
@@ -20,7 +20,7 @@
     </div>
 {% else %}
     <div class="fr-mb-1w content__fileblock">
-        <div class="content__icons content__icons--small content__icons--darkgrey">
+        <div class="content__icons--checkbox">
             <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-labelledby="checkboxIconTitle">
                 <title id="checkboxIconTitle">Checkbox</title>
                 <rect x="21" y="3" width="18" height="18" rx="1" transform="rotate(90 21 3)"></rect>
