--- a/templates/common/table/display_order_icon.html
+++ b/templates/common/table/display_order_icon.html
@@ -1,10 +1,10 @@
 <a class="fr-link fr-link--sm" id='{{order_by_column}}' href='#'>
     {% if '-'|add:order_by_column == order_by%}
-        <b><span class="fr-fi-arrow-down-s-line content__icons--blue fr-fi--sm-active" aria-hidden="true"></span></b>
+        <b><span class="fr-fi-arrow-down-s-line table__icons--blue fr-fi--sm-active" aria-hidden="true"></span></b>
     {% elif order_by_column == order_by %}
-        <b><span class="fr-fi-arrow-up-s-line content__icons--blue fr-fi--sm-active" aria-hidden="true"></span></b>
+        <b><span class="fr-fi-arrow-up-s-line table__icons--blue fr-fi--sm-active" aria-hidden="true"></span></b>
     {% else %}
-        <span class="fr-fi-arrow-up-s-line grey content__icons--darkgrey fr-fi--sm" aria-hidden="true"></span>
+        <span class="fr-fi-arrow-up-s-line grey table__icons--darkgrey fr-fi--sm" aria-hidden="true"></span>
     {% endif %}
 </a>
 
