--- a/templates/common/utils/comments_header.html
+++ b/templates/common/utils/comments_header.html
@@ -6,6 +6,7 @@
         new CommentFactory({
             container_id : '{{object_name}}_comment_factory',
             convention_uuid : '{{convention.uuid}}',
+            load_initial_status : true,
             object_name : '{{object_name}}',
             object_field : 'all',
             dialog_title : "{% if form_input.label %}{{form_input.label|safe}}{% elif label %}{{ label }}{% else %}Commentaires{% endif %}",
