--- a/templates/common/display_field_if_exists.html
+++ b/templates/common/display_field_if_exists.html
@@ -4,7 +4,7 @@
     {% if value or comments|has_comments:object_field %}
         <div class="block--row-strech" id="{{object_field}}_group">
             <div class="block--row-strech-1">
-                <p class="fr-my-1w">{% if label %}{{label}} : {% endif %}{{ value|default_if_none:'-' }}</p>
+                <p class="fr-my-1w">{% if label %}{{label}} : {% endif %}{{ value|default_if_none:'-'|inline_text_multiline }}</p>
             </div>
             {% include "common/utils/comments_field.html" %}
         </div>
