s238: Rename numero galion to numéro de décision

--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -95,7 +95,7 @@
                                         </th>
                                     {% endif %}
                                     <th scope="col">
-                                        Numéro Galion
+                                        Numéro de décision
                                         {% include "common/table/display_order_icon.html" with order_by=order_by order_by_column='programme__numero_galion' url_target='conventions:index' %}
                                     </th>
                                     <th scope="col">
